--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "lucide-react": "^0.115.0",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.1",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "sass": "^1.65.1"
   }
 }
