feat: add jsonbetoken next react-hook-form cookies-next

--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "cookies-next": "^2.1.2",
+    "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.115.0",
-    "next": "13.4.13",
+    "next": "^13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "swr": "^2.2.1",
     "typescript": "5.1.6"
   },
